Refactor Weather
